# fur

./: Cargo.toml
src/: main.rs  session.rs
src/response_parser/: gopher_map.rs  gopher_parse_error.rs  gopher_response.rs  item_type.rs  mod.rs  submenu.rs  text_file.rs
