[package]
name = "fur"
version = "0.0.1"
authors = ["Alex <alex@alex-hansen.com>"]
edition = "2018"
description = "A gopher client and browser."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.7.0-alpha.1", features = ["tcp", "os-poll"]}
tokio = {version = "0.2", features = ["full"]}
